stop featured project img from becoming too large on small screens

--- a/src/components/Pages/Contact/contact.css
+++ b/src/components/Pages/Contact/contact.css
@@ -61,20 +61,6 @@
     }
 
     #contact-title {
-        font-size: 5.5vw;
-    }
-}
-
-@media only screen and (min-width: 950px) {
-    .contact-column {
-        position: relative;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 5px;              
-    }
-
-    #contact-title {
-        font-size: 5.5vw;
+        font-size: 5rem;
     }
 }
